<resources>
    <string name="app_name">Yet Another Notes App</string>
    <string name="short_app_name">Notes</string>
    <string name="version" translatable="false">Version 1.3.0</string>

    <string name="github_link" translatable="false">github.com/cordescodes/Notes</string>
    <string name="published_under">Published under the MIT License</string>
    <string name="mit_license" translatable="false">Copyright 2020 Sam Cordes\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title">Title</string>
    <string name="note">Note</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="new_note">New note</string>

    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="revert">Revert changes</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicated">Duplicated and added to list</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="confirm_delete_prompt">Are you sure you want to delete this note?</string>
    <string name="cannot_be_undone">This cannot be undone.</string>

    <string name="default_theme">Default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>

    <string name="date_mdy">Month/Day/Year</string>
    <string name="date_dmy">Day/Month/Year</string>
    <string name="date_md">Month Day</string>
    <string name="date_dm">Day Month</string>

    <string name="time_12">12 Hour</string>
    <string name="time_24">24 Hour</string>

    <string name="theme">Theme</string>
    <string name="auto_save">Automatically save changes</string>
    <string name="auto_save_summary">Automatically save all changes to notes. If disabled, a manual save button will instead be displayed.</string>
    <string name="confirm_delete">Confirm before deleting</string>
    <string name="confirm_delete_summary">Show a confirmation message before deleting notes.</string>
    <string name="show_popups">Show popups</string>
    <string name="show_popups_summary">Show success messages for Save, Delete and Duplicate operations.</string>
    <string name="show_last_modified">Show last modified date</string>
    <string name="show_last_modified_summary">Display the date and time of last modification in the notes list.</string>
    <string name="date_format">Date format</string>
    <string name="time_format">Time format</string>
    </resources>
