<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/side_margin"
    android:layout_marginEnd="@dimen/side_margin"
    android:layout_marginTop="@dimen/top_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AboutFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:importantForAccessibility="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorContrast"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/colorContrast"
            android:paddingTop="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_link"
            android:textColor="@color/colorContrast"
            android:paddingBottom="4dp"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_under"
            android:textColor="@color/colorContrast"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorContrast"
            android:text="@string/mit_license"
            android:paddingBottom="16dp"/>

    </LinearLayout>
</ScrollView>