<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="note" type="app.cordes.notepad.room.Note"/>
        <variable name="handler" type="app.cordes.notepad.NoteActivity"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbarColor"
                android:elevation="4dp"
                app:itemIconTint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@={note.title}"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text|textCapSentences"/>

            </androidx.appcompat.widget.Toolbar>

            <EditText
                android:id="@+id/note_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginBottom="@dimen/top_margin"
                android:text="@={note.content}"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:gravity="top"
                android:inputType="textMultiLine|textCapSentences"/>

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> handler.save(note, true, false)}"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/ic_save_24dp"
            app:tint="@color/fabIconColor"
            app:backgroundTint="@color/fabColor"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>